Add basic html content for the game board

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-    <h1>Hellooooo</h1>
+
+    <div class="gameContainer">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
 </body>
 
 </html>
