Change board container class name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="gameContainer">
+    <div class="gameBoardContainer">
         <div></div>
         <div></div>
         <div></div>
