Create html game start form without server

--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 
 <body>
 
+    <div class="menuContainer">
+
+        <form>
+
+            <h1>TIC-TAC-TOE</h1>
+
+            <section>
+
+                <div>
+                    <label for="player1">
+                        <span>Player 1 Name</span>
+                    </label>
+                    <input type="text" id="player1Name" maxlength="20">
+                </div>
+
+                <div>
+                    <label for="player2">
+                        <span>Player 2 Name</span>
+                    </label>
+                    <input type="text" id="player2Name" maxlength="20">
+                </div>
+
+                <button type="button">START GAME</button>
+
+            </section>
+
+        </form>
+
+    </div>
+
     <div class="gameBoardContainer">
         <div></div>
         <div></div>
