--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-
+    <!--PONER EL MENU CONTAINER AL PRINCIPIO DE TODO EN EL CENTRO DE LA PANTALLA Y
+    EL TIC TAC TOE EN UN DIALOG QUE APARECE TRAS DARLE A "START"? CON UNA X PARA 
+    SALIR Y CANCELAR EL JUEGO-->
+    <!-- NO DEJAR QUE EL JUEGO EMPIECE CON JUGADORES SIN NOMBRE -->
     <div class="menuContainer">
 
         <form>
