--- a/index.html
+++ b/index.html
@@ -44,21 +44,23 @@
 
     </div>
 
-    <div class="gameInfoContainer">
-        <h2></h2>
-    </div>
+    <dialog>
+        <div class="gameInfoContainer">
+            <h2></h2>
+        </div>
 
-    <div class="gameBoardContainer">
-        <div id="1"></div>
-        <div id="2"></div>
-        <div id="3"></div>
-        <div id="4"></div>
-        <div id="5"></div>
-        <div id="6"></div>
-        <div id="7"></div>
-        <div id="8"></div>
-        <div id="9"></div>
-    </div>
+        <div class="gameBoardContainer">
+            <div id="1"></div>
+            <div id="2"></div>
+            <div id="3"></div>
+            <div id="4"></div>
+            <div id="5"></div>
+            <div id="6"></div>
+            <div id="7"></div>
+            <div id="8"></div>
+            <div id="9"></div>
+        </div>
+    </dialog>
 
 </body>
 
