Change labels for value

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <section>
 
                 <div>
-                    <label for="player1">
+                    <label for="player1Name">
                         <span>Player 1 Name</span>
                     </label>
                     <input type="text" id="player1Name" maxlength="20">
                 </div>
 
                 <div>
-                    <label for="player2">
+                    <label for="player2Name">
                         <span>Player 2 Name</span>
                     </label>
                     <input type="text" id="player2Name" maxlength="20">
