Add cancel button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     </div>
 
+    <button class="cancelButton" type="button">CANCEL GAME</button>
+
     <div class="gameInfoContainer">
         <h2></h2>
     </div>
