--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     </div>
 
     <div class="gameBoardContainer">
-        <div id="1"></div>
-        <div id="2"></div>
-        <div id="3"></div>
-        <div id="4"></div>
-        <div id="5"></div>
-        <div id="6"></div>
-        <div id="7"></div>
-        <div id="8"></div>
-        <div id="9"></div>
+        <div class="s0"></div>
+        <div class="s1"></div>
+        <div class="s2"></div>
+        <div class="s3"></div>
+        <div class="s4"></div>
+        <div class="s5"></div>
+        <div class="s6"></div>
+        <div class="s7"></div>
+        <div class="s8"></div>
     </div>
 
 </body>
